--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,8 +104,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:lines="1"
-                android:maxLength="100"
-                android:text="mario@gmail.com" />
+                android:maxLength="100" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -127,8 +126,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:lines="1"
-                android:maxLength="100"
-                android:text="Mario123@" />
+                android:maxLength="100" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
