--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -42,7 +42,7 @@
         android:layout_marginTop="@dimen/xs_margin"
         android:text="@string/sign_up_instructions"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-        android:textColor="@color/black"
+        android:textColor="@color/gray"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/end_guideline"
         app:layout_constraintStart_toStartOf="@id/start_guideline"
